# Titan-Protocol-v2

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  TITAN_PROTOCOL.md  app.json  babel.config.js  eas.json  generate-onboarding-voices.js  jest.config.js  metro.config.js  node_modules  package-lock.json  package.json  start-dev.js  test-simulation.ts  titan-release.jks.b64  tsconfig.json  vercel.json
.claude/: settings.json
.claude/hooks/: typecheck-on-commit.sh
.github/workflows/: android-build.yml  android-mobile.yml  android.yml  electron-windows-build.yml  mobile-saas-android.yml  web.yml  windows-build.yml
android/: gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
app/: +not-found.tsx  _layout.tsx  achievements.tsx  dev-sync.tsx  field-ops.tsx  mind-training.tsx  narrative.tsx  onboarding.tsx  protocol.tsx  quests.tsx  status.tsx  titles.tsx  tutorial.tsx  walkthrough.tsx
app/(auth)/: _layout.tsx  email-login.tsx  (+3 more)
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/src/: lib.rs
docs/: MIGRATION_LOCAL_FIRST.md  PHASE_6_VALIDATION.md  google-oauth-setup.md  play-store-listing.md  privacy-policy.html  v1-launch-handoff.md
shared/: CLAUDE.md  index.ts  package-lock.json  package.json  tsconfig.json
web/: .gitignore  BILLING.md  CLAUDE.md  DESKTOP_RELEASE.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/src/: lib.rs
(+919 files in other folders)
